more english text and latex fiddling